# drivers-orogen-transformer

./: BroadcastTypes.hpp  CMakeLists.txt  TransformDefinition.hpp  TransformerStatus.hpp  manifest.xml  transformer.orogen
rock/: orogen_plugin.rb  roby_plugin.rb  runtime.rb  syskit_plugin.rb
rock/transformer/: runtime.rb
scripts/: task_a.rb  task_b.rb  task_c.rb  transformer_publisher.rb  transforms.rb
tasks/: CMakeLists.txt  Task.cpp  Task.hpp  TransformationMonitor.cpp  TransformationMonitor.hpp  TransformationProxy.cpp  TransformationProxy.hpp
